# data-interfaces-frontend

./: .gitignore  AGENTS.md  README.md  dev-plan-player-management.md  docker-compose.yml  opencode.json  package-lock.json  package.json
back/: .env.example  Dockerfile  README.md  pyproject.toml
back/api-authentication/: .env  Dockerfile  README.md  pyproject.toml
back/api-authentication/src/api_authentication/: database.py  main.py  models.py  schemas.py
back/api-economy-feed/: Dockerfile  README.md  pyproject.toml
back/api-economy-feed/src/api_economy_feed/: main.py  schemas.py
back/api-economy-feed/src/api_economy_feed/services/: economy_rss_feed.py
back/api-economy-feed/src/api_economy_feed/utils/: datetimes.py
back/api-name-origin-probabilities/: Dockerfile  README.md  pyproject.toml
back/api-name-origin-probabilities/src/api_name_origin_probabilities/: country.py  database.py  main.py  models.py  schemas.py
back/api-name-origin-probabilities/src/api_name_origin_probabilities/services/: api_nationalize.py
back/app/: main.py
back/app/api/v1/: api_router.py  helpers.py
back/app/api/v1/endpoints/: applications.py  players.py  search_topic.py  teams.py  (+6 more)
back/app/applications/: __init__.py  dependencies.py  registrar.py
back/app/applications/rugby_teams/: __init__.py  router.py
back/app/core/: config.py  logging_config.py  rate_limit.py  security.py  token.py
back/app/db/: repository.py  session.py
back/app/db/repositories/: __init__.py  player_repository.py  team_repository.py  tournament_repository.py
back/app/migrations/: env.py
back/app/migrations/versions/: 09d653bd3d49_create_user_stravoska_table.py
back/app/models/: __init__.py  application.py  category.py  player.py  player_category.py  season.py  team.py  team_category.py  team_season.py  tournament.py  tournament_player.py  user.py  user_application.py
back/app/prompts/: search_topic_prompt.py
back/app/schemas/: application.py  player.py  search_topic.py  season.py  team.py  tournament.py  training.py  user.py
back/app/services/: category_service.py  player_service.py  search_topic_service.py  season_service.py  team_service.py  tournament_service.py  user_service.py
back/app/services/training/: registry.py
back/app/tests/: conftest.py  test_security.py  test_user_service.py  test_users_endpoints.py
back/app/tests/api/: test_health.py  test_search_topic.py  test_team_endpoints.py  test_token_endpoints.py  test_users_endpoints.py
back/app/tests/core/: test_config.py  test_logging_config.py  test_rate_limit.py  test_security.py  test_token.py
back/app/tests/schemas/: test_player_schema.py  test_team_schema.py  test_user_schema.py
back/app/tests/services/: test_player_service.py  test_search_topic_service.py  test_season_service.py  test_team_service.py  test_training_registry.py  test_user_service.py
back/app/tests/utils/: test_exceptions.py  test_validators.py
back/app/utils/: exceptions.py  validators.py
(+291 files in other folders)
