[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Un service FastAPI qui gère le backend de l'application Stravoska"
authors = ["Antoine Almoussa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.17.2"
bcrypt = "^5.0.0"
pytest = "^9.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
