[tool.poetry]
name = "api-authentication"
version = "0.1.0"
description = "Un service FastAPI qui permet de s'inscrire et de se connecter à l'application principale"
authors = ["Antoine Almoussa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
