[tool.poetry]
name = "api-economy-feed"
version = "0.1.0"
description = "Un service FastAPI qui renvoie les dernières informations économiques du Ministère français"
authors = ["Antoine Almoussa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
