[tool.poetry]
name = "api-name-origin-probabilities"
version = "0.1.0"
description = "Un service FastAPI qui calcule les probabilités de pays d'origine d'un prénom"
authors = ["Antoine Almoussa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
